# Math-Mentor-AI

./: .env.example  .gitignore  LICENSE  README.md  app.py  create_knowledge_base.py  pyproject.toml  requirements.txt  setup.py
agents/: explainer_agent.py  parser_agent.py  solver_agent.py  verifier_agent.py
memory/: store.py
multimodal/: audio_processor.py  ocr_processor.py
rag/knowledge_base/: algebra_formulas.txt  calculus_formulas.txt  linear_algebra_formulas.txt  probability_formulas.txt
rag/vectorstore/: index.faiss  index.pkl  vectorstore.py
