[project]
name = "math-mentor-ai-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.5.0",
    "easyocr==1.7.1",
    "faiss-cpu==1.8.0",
    "langchain==0.3.0",
    "langchain-community==0.3.0",
    "langchain-core==0.3.15",
    "langchain-groq==0.2.0",
    "langchain-huggingface==0.1.0",
    "langchain-openai==0.2.0",
    "langgraph==0.2.28",
    "numpy==1.26.4",
    "openai==1.54.0",
    "openai-whisper==20240930",
    "pandas==2.2.3",
    "pillow==10.4.0",
    "pydub==0.25.1",
    "python-dotenv==1.0.1",
    "sentence-transformers==3.2.0",
    "streamlit==1.39.0",
    "sympy==1.13.1",
]
